# subtitle-translator

./: .gitignore  README.md  pyproject.toml
src/subtitle_translator/: __main__.py  app.py  cli.py  media.py  models.py  subtitles.py  translation.py
tests/: test_media.py  test_models.py  test_subtitles.py  test_translation.py
